# Buddy_OpenGL

./: CMakeLists.txt  bunny.geom  bunny.vert  check_ply_data.py  frag.frag  lamp.frag  lamp.vert  main.cpp  main.cpp.backup  targetTriangle.frag  targetTriangle.vert  vertex.vert
common/: shader.cpp
utils/: shader.hpp
